--- a/lib/utils/browser-sync-start.html
+++ b/lib/utils/browser-sync-start.html
@@ -114,7 +114,7 @@
         <div id="servers">
             ... Locating servers ...
         </div>
-        <div id="server-tmpl" style="display:none" onclick="alert(123);">
+        <div id="server-tmpl" style="display:none">
             <div class="connection" id="panel-__KEY__">
                 <div class="details"><b>__KEY__</b>
                     <div class="value">__VALUE__</div>
