--- a/lib/utils/browser-sync-start.html
+++ b/lib/utils/browser-sync-start.html
@@ -207,14 +207,26 @@
             iframe.style.position = 'absolute';
             iframe.style.top = 0;
             iframe.style.left = 0;
-            iframe.style.width = window.innerWidth + 'px';
-            iframe.style.height = window.innerHeight + 'px';
             iframe.style.backgroundColor = 'white';
             iframe.style.border = 'none';
 		    iframe.src = url;
-		    document.body.style.margin = 0;
-		    document.body.style.padding = 0;
-            document.body.appendChild(iframe);
+
+		    var body = document.body;
+            while (body.firstChild) {
+                body.removeChild(body.firstChild);
+            }
+		    body.style.margin = 0;
+		    body.style.padding = 0;
+            body.appendChild(iframe);
+
+            function onresize() {
+                iframe.style.width = window.innerWidth + 'px';
+                iframe.style.height = window.innerHeight + 'px';
+            }
+
+            window.onresize = onresize;
+
+            onresize();
         } else {
 	    	window.location.href = url;
         }
